--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,16 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
 		type="text/css" />
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+
+<script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("user_7F1F4BsSIDsHZIUE4W95A");
+   })();
+</script>
+
 </head>
 
 <body>
@@ -66,7 +76,7 @@
 				<h5 class="uppercase text-center">Let's work together</h5>
 			</div>
 			<div class="center-form">
-				<form>
+				<form onsubmit="return sendMail(this);">
 					<input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
 					<input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
 					<textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Project Description" required></textarea>
@@ -105,6 +115,7 @@
 			</div>
 		</div>
 	</footer>
+    <script src="/assets/js/sendEmail.js"></script>
 </body>
 
 </html>
