--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 				<form onsubmit="return sendMail(this);">
 					<input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
 					<input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
-					<textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Project Description" required></textarea>
+					<textarea rows="5" name="message" class="form-control" id="projectsummary" placeholder="Project Description" required></textarea>
 					<button type="submit" class="btn btn-secondary center-block">Send Project Request</button>
 				</form>
 			</div>
